--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -18,9 +18,9 @@
     <header id="header">
       <nav class="nav-bar">
         <ul class="nav-bar__links">
-          <li class="nav-bar__link"><a href="#">Biography</a></li>
+          <li class="nav-bar__link"><a href="#biography">Biography</a></li>
           <li class="nav-bar__link tribute"><a href="#">Tribute Page</a></li>
-          <li class="nav-bar__link"><a href="#">Discography</a></li>
+          <li class="nav-bar__link"><a href="#discography">Discography</a></li>
         </ul>
       </nav>
     </header>
@@ -31,7 +31,7 @@
           One of the most ferociously talented singers to emerge from Brazil.
         </p>
         <div class="go-to-discography">
-          <a href="#">
+          <a href="#discography">
             <img src="./assets/images/arrow.png" alt="" />
           </a>
         </div>
