--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -28,6 +28,9 @@
           <li>
             <a href="#students-say" class="nav-link">What students say</a>
           </li>
+          <li>
+            <a href="#faq" class="nav-link">FAQ</a>
+          </li>
         </ul>
       </nav>
       <div>
@@ -55,6 +58,7 @@
         </div>
         <div class="video-container">
           <iframe
+            id="video"
             width="560"
             height="315"
             src="https://www.youtube.com/embed/IGADP2i1ItQ"
@@ -327,18 +331,43 @@
         <a href="#" class="bg-button">Get started</a>
       </section>
     </main>
-    <footer class=""></footer>
-    <!-- <main>
-      <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <input id="email" type="email" name="email" placeholder="...."/>
-        <input id="submit" type="submit" placeholder="...."/>
-    
-      </form>
-    </main>
-    <div id="a">
-    <div id="b">
-    <div id="c">
-     -->
+    <footer>
+      <header>
+        <a href="#">
+          <img src="./assets/img/logo.svg" alt="logo" />
+        </a>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input
+            id="email"
+            type="email"
+            name="email"
+            placeholder="Stay in the loop  - sign up with your email"
+          />
+          <input id="submit" type="submit" value="Subscribe" />
+        </form>
+      </header>
+      <nav>
+        <ul>
+          <h4>Help Menu</h4>
+          <li>About</li>
+          <li>Features</li>
+          <li>Works</li>
+          <li>Career</li>
+          <li>Contact</li>
+          <li>Help & Support</li>
+          <li>Privacy Policy</li>
+          <li>Terms & Conditions</li>
+        </ul>
+
+        <ul>
+          <h4>Product</h4>
+          <li>Essential Landing Page</li>
+          <li>Alpha Dashboard Pro</li>
+          <li>Karnel Admin Dashboard</li>
+          <li>Gray UI Kit</li>
+        </ul>
+      </nav>
+    </footer>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
       const swiper = new Swiper('.swiper', {
